obstacle creation/errors
dino_move.c:19:21: error: 'NULL' undeclared (first use in this function)
     void *lw = mmap(NULL, MAP_SIZE,
                     ^
dino_move.c:20:21: error: 'PROT_READ' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                     ^
dino_move.c:20:31: error: 'PROT_WRITE' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                               ^
dino_move.c:20:43: error: 'MAP_SHARED' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                                           ^
dino_move.c:22:12: error: 'MAP_FAILED' undeclared (first use in this function)
     if(lw==MAP_FAILED){ perror("mmap"); return 1; }
            ^
dino_move.c:25:14: error: unknown type name 'uint32_t'
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
              ^
dino_move.c:25:34: error: 'uint32_t' undeclared (first use in this function)
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
                                  ^
dino_move.c:25:44: error: expected expression before ')' token
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
                                            ^
dino_move.c:26:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                       ^
dino_move.c:26:24: error: 'cg_x' undeclared (first use in this function)
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                        ^
dino_move.c:26:44: error: expected expression before ')' token
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                                            ^
dino_move.c:27:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                       ^
dino_move.c:27:24: error: 'cg_y' undeclared (first use in this function)
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                        ^
dino_move.c:27:44: error: expected expression before ')' token
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                                            ^
dino_move.c:28:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                       ^
dino_move.c:28:24: error: 'lava_x' undeclared (first use in this function)
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                        ^
dino_move.c:28:44: error: expected expression before ')' token
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                                            ^
dino_move.c:29:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);
                       ^
dino_move.c:29:24: error: 'lava_y' undeclared (first use in this function)
     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);
                        ^
dino_move.c:29:44: error: expected expression before ')' token



Error (10170): Verilog HDL syntax error at vga_ball.sv(112) near text: "else";  expecting "endmodule". Check for and fix any syntax errors that appear immediately before or at the specified keyword. The Intel FPGA Knowledge Database contains many articles with specific details on how to resolve this error. Visit the Knowledge Database at https://www.altera.com/support/support-resources/knowledge-base/search.html and search for this specific error message number. File: /homes/user/stud/fall23/rp3187/Downloads/lab3/soc_system/synthesis/submodules/vga_ball.sv Line: 112
Error (10170): Verilog HDL syntax error at vga_ball.sv(113) near text: ")";  expecting ".", or an identifier. Check for and fix any syntax errors that appear immediately before or at the specified keyword. The Intel FPGA Knowledge Database contains many articles with specific details on how to resolve this error. Visit the Knowledge Database at https://www.altera.com/support/support-resources/knowledge-base/search.html and search for this specific error message number. File: /homes/user/stud/fall23/rp3187/Downloads/lab3/soc_system/synthesis/submodules/vga_ball.sv Line: 113
Error (10170): Verilog HDL syntax error at vga_ball.sv(123) near text: "end"; "end" without "begin" . Check for and fix any syntax errors that appear immediately before or at the specified keyword. The Intel FPGA Knowledge Database contains many articles with specific details on how to resolve this error. Visit the Knowledge Database at https://www.altera.com/support/support-resources/knowledge-base/search.html and search for this specific error message number. File: /homes/user/stud/fall23/rp3187/Downloads/lab3/soc_system/synthesis/submodules/vga_ball.sv Line: 123
Error (10112): Ignored design unit "vga_ball" at vga_ball.sv(4) due to previous errors File: /homes/user/stud/fall23/rp3187/Downloads/lab3/soc_system/synthesis/submodules/vga_ball.sv Line: 4
Error (10112): Ignored design unit "vga_counters" at vga_ball.sv(224) due to previous errors File: /homes/user/stud/fall23/rp3187/Downloads/lab3/soc_system/synthesis/submodules/vga_ball.sv Line: 224

     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);


Error (10748): Verilog HDL error at vga_ball.sv(140): expression in variable declaration assignment to vs_rising must be constant File: /homes/user/stud/spring25/as7525/Music/lab11/soc_system/synthesis/submodules/vga_ball.sv Line: 140
Error (12152): Can't elaborate user hierarchy "soc_system:soc_system0|vga_ball:vga_ball_0" File: /homes/user/stud/spring25/as7525/Music/lab11/soc_system/synthesis/soc_system.v Line: 357

